--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,12 @@
-To install YafaRay into Blender:
+To install YafaRay v3 into Blender:
+
+** IMPORTANT **
+----------------------------------------------
+The new YafaRay-v3 will *NOT* replace the existing YafaRay versions, and it can be installed *in addition* to them.
+So, YafaRay-v3 *must* be enabled in Blender user preferences, and in your current YafaRay scenes you have to switch to the renderer "YafaRay-v3" to use the new version.
+
+Also, support has been DROPPED for Windows XP and MacOSX v10.6
+----------------------------------------------
 
 Don't use the Blender from the distro repositories. Download the Blender official builds from:
 https://www.blender.org/download/
@@ -6,16 +14,16 @@ https://www.blender.org/download/
 Once Blender is installed, locate the folder where it was installed. The paths given below are just examples, but they will probably be different in your system.
 
 Copy this entire folder "yafaray" to (for example):
-  - in Linux 64bit, for example: "$HOME/blender-2.74-linux-glibc211-x86_64/2.74/scripts/addons" folder.
-  - in Windows 64bit, for example: "C:\Program Files\Blender Foundation\Blender\2.74\scripts\addons" folder.
+  - in Linux 64bit, for example: "$HOME/blender-2.77a-linux-glibc211-x86_64/2.77/scripts/addons" folder.
+  - in Windows 64bit, for example: "C:\Program Files\Blender Foundation\Blender\2.77\scripts\addons" folder.
 
-After it, start Blender, go to User Preferences, AddOns and try to enable Render:YafaRay. Once (hopefully) enabled you should see it in the list of renderers.
+After it, start Blender, go to User Preferences, AddOns and try to enable Render:"YafaRay-v3". Once (hopefully) enabled you should see it in the list of renderers.
 
 * Important: the YafaRay Linux 32bit build requires a processor with SSE/SSE2 instructions. Any non-ancient processor should have them...
 
 If you have any issues:
 
-* Check that you have copied the "yafaray" folder into the correct Blender addons folder.
+* Check that you have copied the "yafaray_v3" folder into the correct Blender addons folder.
 * Check that you have downloaded the appropiate YafaRay build for your Operating System and Blender build (32/64 bit)
 * Check that you are using the official Blender build from www.blender.org and it's a version supported by YafaRay (see CHANGELOG)
 * If you still have problems, please ask for help in the yafaRay.org forums or post a bug report in http://www.yafaray.org/development/bugtracker/yafaray  
