--- a/README
+++ b/README
@@ -7,8 +7,7 @@ For more information, see: http://www.yafaray.org
 IMPORTANT: current LIMITATIONS of YafaRay:
 * YafaRay only supports *one* version of YafaRay installed in the system. This limitation also affects installations of multiple "forks" of YafaRay, even if they have different names.
 If you have a black window when rendering:
-    - Make sure that YafaRay is correctly installed in the appropiate place
-    - Make sure there are no other YafaRay versions/forks installed. 
+    - Make sure that YafaRay is correctly installed in the appropiate place. See file "INSTALL" for installation details
 
 * YafaRay only supports *one* scene in the .blend file. If you have more than one scene, it could cause unexpected results and problems in the new Material Preview Controls.
 
