--- a/README
+++ b/README
@@ -2,13 +2,11 @@ DESCRIPTION
 -----------
 YafaRay is a free open-source montecarlo raytracing engine released under the LGPL 2.1 license. Raytracing is a rendering technique for generating realistic images by tracing the path of light through a 3D scene. 
 
+Make sure that YafaRay is correctly installed in the appropiate place. See file "INSTALL" for installation details
+
 For more information, see: http://www.yafaray.org
 
 IMPORTANT: current LIMITATIONS of YafaRay:
-* YafaRay only supports *one* version of YafaRay installed in the system. This limitation also affects installations of multiple "forks" of YafaRay, even if they have different names.
-If you have a black window when rendering:
-    - Make sure that YafaRay is correctly installed in the appropiate place. See file "INSTALL" for installation details
-
 * YafaRay only supports *one* scene in the .blend file. If you have more than one scene, it could cause unexpected results and problems in the new Material Preview Controls.
 
 Please post bugreports and feature requests here:
@@ -17,7 +15,6 @@ http://www.yafaray.org/development/bugtracker/yafaray
 
 RELEASES
 --------
-
 For the official YafaRay latest exporter updates check:
 
 https://github.com/YafaRay/Blender-Exporter
