--- a/INSTALL
+++ b/INSTALL
@@ -5,6 +5,8 @@ To install YafaRay v3 into Blender:
 The new YafaRay-v3 will *NOT* replace the existing YafaRay versions, and it can be installed *in addition* to them.
 So, YafaRay-v3 *must* be enabled in Blender user preferences, and in your current YafaRay scenes you have to switch to the renderer "YafaRay-v3" to use the new version.
 
+If you want to keep old versions and the new v3 together, make sure you enable in Blender first the old and then the new v3 in that order. If you have problems, disable both, restart Blender and enable them in that order.
+
 Also, support has been DROPPED for Windows XP and MacOSX v10.6
 ----------------------------------------------
 
