--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 Important: read the README file for installation instructions and important information about YafaRay
 
-YafaRay v3.0.0-ALPHA7 (only for developers testing) (2016-05-26) for Blender 2.77a:
+YafaRay v3.0.0-ALPHA8 (only for developers testing) (2016-06-19) for Blender 2.77a:
 ----------------------------------------------
 ** IMPORTANT **
 ----------------------------------------------
@@ -41,8 +41,9 @@ Feature changes/additions in v3.0.0:
 
 * Ability to perform Multi-Computer distributed render. Each computer should have a different Node number [0..1000] to ensure they don't repeate the same samples. The Node number can be setup in a parameter or in the Exporter under Blender User Preferences -> YafaRay v3 -> Preferences -> Computer Node (remember to Save Settings to store the number permanently in Blender).
 
-Each computer will generate a different Film. If one of the nodes is set to "Load" the film, it will look for ALL the *.film files in the same folder and combine them together to create a combined image with all samples from all individual film files.
+Each computer will generate a different Film. If one of the nodes is set to "Load" the film, it will look for ALL the Film files in the same folder (with the same base file name and frame number) and combine them together to create a combined image with all samples from all individual film files.
 
+* Added OpenCV library and added DeNoise options for the exported image files: JPG, PNG, TGA, TIF. This feature is not available for HDR/EXR formats.
 
 * YafaRay-v3 can be installed "in parallel" with other major versions of YafaRay and coexist with them. "YafaRay v3" will appear as a DIFFERENT renderer and has to be enabled and selected in each scene as if it were a new renderer. This should help to compare the results and features over different major versions as well as allowing using a "stable" and a more "experimental" versions in parallel at the same time.
 
