--- a/INSTALL
+++ b/INSTALL
@@ -21,6 +21,8 @@ Copy this entire folder "yafaray" to (for example):
 
 After it, start Blender, go to User Preferences, AddOns and try to enable Render:"YafaRay-v3". Once (hopefully) enabled you should see it in the list of renderers.
 
+(Optional) In the User Preferences, AddOns, YafaRay-v3: select the YafaRay Computer Node number. If you have several computers and you want to render an image or animation using several computers (render farm), just select a different Computer Node number for each PC. This will allow the internal ImageFilm files to use different samples in the different computers, so later they can be combined into a combined render combining the ImageFilm files from each PC ("offline" multicomputer rendering)
+
 * Important: the YafaRay Linux 32bit build requires a processor with SSE/SSE2 instructions. Any non-ancient processor should have them...
 
 If you have any issues:
