--- a/README
+++ b/README
@@ -9,6 +9,18 @@ For more information, see: http://www.yafaray.org
 IMPORTANT: current LIMITATIONS of YafaRay:
 * YafaRay only supports *one* scene in the .blend file. If you have more than one scene, it could cause unexpected results and problems in the new Material Preview Controls.
 
+* YafaRay v3 has only limited support for multiple YafaRay versions and forks installed at the same time
+
+If you have several YafaRay versions together, *make sure* that you enable in Blender *first* the old and *later* the new v3 in that order. If you have problems, disable both, restart Blender and enable them in that order.
+
+Having several versions could cause in some cases:
+    - Black renders
+    - Random crashes
+    - Inability to enable the YafaRay v3 plugin or all kinds of strange problems
+
+If you have any of these problems, remove any other yafaray folders (or derived forks) from the Blender addons folder and try again. This typically solves most of the problems stated above.
+
+
 Please post bugreports and feature requests here:
 http://www.yafaray.org/development/bugtracker/yafaray
 
